package SmartApplication;

public enum DeviceType {
    LIGHT,
    AIR_CONDITIONER,
    SPEAKER
}
