package SmartApplication;

public class HuaweiAirConditioner implements SmartAirConditioner{
    public String getDescription() {
        return "Huawei Air Conditioner";
    }
}
