package SmartApplication;

public class HuaweiSpeakerBuilder extends SmartSpeakerBuilder {
    public void buildWiFiModule(){smartSpeaker.setWiFiModule(("华为音响wifi模块"));}
    public void buildAudioQuality(){smartSpeaker.setAudioQuality("华为音响音效设置");}
    public void buildVoiceAssistant(){smartSpeaker.setVoiceAssistant("华为音响语音识别模块");}
}
