package SmartApplication;

public class PhilipsAirConditioner implements SmartAirConditioner{
    public String getDescription() {
        return "Philips Air Conditioner";
    }
}
