package SmartApplication;

public class PhilipsSpeakerBuilder extends SmartSpeakerBuilder {
    public void buildWiFiModule(){smartSpeaker.setWiFiModule("Philips的wifi模块");}
    public void buildAudioQuality(){smartSpeaker.setAudioQuality("Philips音响音效设置");}
    public void buildVoiceAssistant(){smartSpeaker.setVoiceAssistant("Philips音响语音识别模块");}
}
