package SmartApplication;

public interface SmartAirConditioner extends SmartDevice{
}
