package SmartApplication;

public interface SmartLight extends SmartDevice{
    SmartLight clone();
}
