package SmartApplication;

public enum Vendor {
    HUAWEI,
    XIAOMI,
    PHILIPS
}
