package SmartApplication;

public class XiaomiAirConditioner implements SmartAirConditioner{
    public String getDescription(){
        return "Xiaomi Air Conditioner";
    }
}
