package SmartApplication;

public class XiaomiSpeakerBuilder extends SmartSpeakerBuilder {
    public void buildWiFiModule(){smartSpeaker.setWiFiModule(("小米音响wifi模块"));}
    public void buildAudioQuality(){smartSpeaker.setAudioQuality("小米音响音效设置");}
    public void buildVoiceAssistant(){smartSpeaker.setVoiceAssistant("小米音响语音识别模块");}
}
